<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/body_container"
        android:text="@string/bmi_stand_for"
        android:textColor="@color/black"
        android:textSize="11pt"
        android:gravity="center"
        android:fontFamily="@font/miglia"
        android:padding="10dp"/>

    <LinearLayout
        android:id="@+id/body_container"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/input_background"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginHorizontal="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/height"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/height_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/height"
                android:textColorHint="@color/dark_gray"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                android:layout_margin="4dp"
                android:inputType="numberDecimal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp"
            android:layout_marginHorizontal="5dp">

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/weight"
                android:layout_gravity="center"/>

            <EditText
                android:id="@+id/weight_edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/weight"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_gray"
                android:backgroundTint="@color/black"
                android:layout_margin="4dp"
                android:inputType="numberDecimal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <CheckBox
                android:id="@+id/athlete_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/athlete"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="6pt"
                android:layout_weight="2"/>

            <RadioGroup
                android:id="@+id/gender_radio_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1">

                <RadioButton
                    android:id="@+id/male_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textColor="@color/black"
                    android:textSize="5pt"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@+id/female_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:textColor="@color/black"
                    android:textSize="5pt"
                    android:text="@string/female"/>

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/result_btn"
            android:layout_width="125dp"
            android:layout_height="50dp"
            android:text="@string/result"
            android:layout_gravity="center"
            android:layout_margin="15dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>