<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        android:background="@drawable/result_background"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:src="@drawable/female"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_margin="20dp"/>

            <ImageView
                android:id="@+id/athlete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/running"
                app:layout_constraintLeft_toRightOf="@id/avatar"
                app:layout_constraintBottom_toBottomOf="@id/avatar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="7dp">

                <TextView
                    android:id="@+id/current_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="7pt"
                    android:text="@string/current_weight"
                    android:gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/current_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="7pt"
                    android:text="@string/current_height"
                    android:gravity="center"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="7dp">

                <TextView
                    android:id="@+id/bmi_boarder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="9pt"
                    android:text="@string/bmi"
                    android:gravity="right"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/bmi_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="9pt"
                    android:textStyle="bold"
                    android:text="000"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="7dp">

                <TextView
                    android:id="@+id/weight_boarder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:text="@string/normal_weight"
                    android:gravity="right"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/weight_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:text="000"
                    android:layout_weight="1"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="7dp">

                <TextView
                    android:id="@+id/calorie_boarder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:text="@string/suggested_calories"
                    android:gravity="right"
                    android:layout_weight="1"/>

                <TextView
                    android:id="@+id/calorie_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="8pt"
                    android:text="000"
                    android:layout_weight="1"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>